k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-prod
  labels:
    name: banking-prod
    environment: production
    app.kubernetes.io/managed-by: helm
